GL/src/test/deca/syntax/invalid/deca_sans_objet/print_missing_paren.deca
// Description :
// test print sans parenthese
//
// Resultat :
// Erreur syntaxique
// Ligne 8 : parenthese attendue
{
print 1;
}